    * cc_library generates (possibly) more sub-rules to compile each of its `srcs` separately,
      which is significantly faster for large numbers of inputs.
    * filegroup now has an internal implementation rather than being done in bash. This
      allows some things internally to be done more robustly and avoids errors from command
      line length limits for very large filegroups.


Version 2.2.1
-------------

    * Reworked ordering of tasks during build; should make little difference to overall time
      but parses will happen relatively faster so the estimated total task number will rise
      faster. This is more akin to the pre-1.8 behaviour.
    * Fix bug where targets with need_transitive_deps = True could incorrectly receive tools
      of their indirect deps in their tmp directory.


Version 2.2.0
-------------

    * Python targets now have a `stripped` build config in which the .py files are stripped out
      and only .pyc / .pyo bytecode files included in the .pex.
      We're considering making this the default behaviour for `opt` but if we do that will be
      left for a future major revision.


Version 2.1.2
-------------
    * Fixes one more bug with sh_binary where paths were taken to be relative when they were absolute.

Version 2.1.1
-------------
    * Fixes bug with sh_binary not ignoring the main script properly when generating the tarball.

Version 2.1.0
-------------
    * Adds additional features to sh_binary to make it more complete. sh_binary now creates
      a single bash script. This script contains all dependencies as well as the main
      script to be executed. When the sh_binary is run, it extracts all the files
      to the current directory and finally executes the main script.

Version 2.0.0
-------------

    * We are going to try doing semver from here on, so this release increments the major
      version due to several very slightly breaking changes.
    * More convenient output on incorrect hashes.